2024 day12 part 1 refactor