@@ -57,7 +57,7 @@ class Day12Test {
 
         List<Region> regions = new ArrayList<>();
         while (!pointsToProcess.isEmpty()) {
-            Point seed = pointsToProcess.remove(0);
+            Point seed = pointsToProcess.removeFirst();
             Region r = growRegionFrom(seed, map);
             regions.add(r);
             pointsToProcess.removeAll(r.gardenPlots);
@@ -81,7 +81,7 @@ class Day12Test {
         growths.add(new Point(seed.x, seed.y));
 
         while (!growths.isEmpty()) {
-            Point growFrom = growths.remove(0);
+            Point growFrom = growths.removeFirst();
             region.gardenPlots.add(growFrom);
 
             List<Point> neighbors = getNeighbors(region.type, map, growFrom);
@@ -135,45 +135,6 @@ class Day12Test {
         return fencedSides;
     }
 
-    private int solvePart1(char[][] map) {
-
-
-        // as 2-d grid?
-        // start in upper left and grow the region out while adjacent cell equals seed
-        // maybe replace a cell that's been tracked with .?
-        // then find next untracked letter and begin growing that region out
-        // perimeter is not a function of number cells, it needs to trace the outline?
-        // perimeter probably needs to track positions and then trace around outside edge?
-
-        // TODO - doesn't work for disjoint regions - need to rethink to track attached regions and then get
-        //  fencing by iterating the points in each region..
-        // List of all points
-        // for first unsolved point, build region from that point (recursive grow up/down/left/right
-        // adding each point to region list and removing from unsolved list
-        // then get fencing needed for that region - # points in region * count fenced sides
-        Map<Character, Integer> regionCount = new HashMap<>();
-        Map<Character, Integer> fenceCount = new HashMap<>();
-
-        for (int row = 0; row < map.length; row++) {
-            for (int col = 0; col < map[row].length; col++) {
-                char c = map[row][col];
-                regionCount.put(c, regionCount.getOrDefault(c, 0) + 1);
-
-                int fenceNeeded = countFencedSides(map, row, col);
-                fenceCount.put(c, fenceCount.getOrDefault(c, 0) + fenceNeeded);
-
-            }
-        }
-
-        int result = 0;
-        for (Map.Entry<Character, Integer> entry : regionCount.entrySet()) {
-            int regionPrice = entry.getValue() * fenceCount.get(entry.getKey());
-            result += regionPrice;
-        }
-
-        return result;
-    }
-
     private char safeCharGrab(char[][] map, int row, int col) {
         char c = '.';
         try {
@@ -183,5 +144,4 @@ class Day12Test {
         }
         return c;
     }
-
 }
